--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -32,7 +32,7 @@
                 <input type="text" placeholder="Допълнителна информация">
             </div>
             <div class="button-container">
-                <div class="button">
+                <div (click)="addOrder()" class="button">
                     Към Плащане
                 </div>
             </div>
