Order model removed; Created get and create order models; My orders component updated to work with db data; Added Logout method and nav to profile component; Added GetOrderByUserId to order service;

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile-container">
     <div class="profile-nav">
         <ul>
-            <li (click)="SelectItemIndex(1)" [class.active]="selectedIndex === 1">
+            <li (click)="SelectItemIndex(1)" routerLink="MyOrders" [class.active]="selectedIndex === 1">
                 <i class="fa-solid fa-cart-flatbed fa-fw"></i>
                 Моите поръчки
             </li>
