--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -1,10 +1,10 @@
 <div class="my-orders-container">
     <h1 class="header">Моите поръчки</h1>
 
-    <div class="order-container">
+    <div *ngFor="let order of orders" class="order-container">
         <div class="order">
             <div class="order-content">
-                <p class="text">Поръчка от 20.05.23</p>
+                <p class="text">Поръчка от {{order.ShipmentDepartDate}}</p>
                 <div class="sticker">
                     <p>Доставена</p>
                 </div>
@@ -14,23 +14,6 @@
             </div>
         </div>
         <div class="order-date">
-            <p>Май 2023</p>
-        </div>
-    </div>
-
-    <div class="order-container">
-        <div class="order">
-            <div class="order-content">
-                <p class="text">Поръчка от 20.05.23</p>
-                <div class="sticker">
-                    <p>Доставена</p>
-                </div>
-            </div>
-            <div class="order-img">
-                <img alt="Image of the product" src="assets/card.png">
-            </div>
-        </div>
-         <div class="order-date">
             <p>Май 2023</p>
         </div>
     </div>
