--- a/src/app/my-orders/my-orders.component.css
+++ b/src/app/my-orders/my-orders.component.css
@@ -76,6 +76,13 @@
                 justify-content: end;
             }
 
+            .images-container-mobile{
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: end;
+                padding-block: 1rem;
+            }
+
                 .order-img{
                     height: 100%;
                     display: flex;
@@ -117,5 +124,42 @@
 
     .order-date{
         padding-right: 1vw;
+    }
+}
+
+@media (max-width: 800px) {
+    .order-date{
+        display: none;
+    }
+
+    .header{
+        display: flex;
+        justify-content: center;
+        font-size: 1.4rem;
+        padding-bottom: 2.5rem;
+    }
+
+    .order-container{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+
+        grid-gap: 0;
+        padding-block: 8px;
+    }
+
+    .order{
+        width: 80%;
+        height: fit-content;
+    }
+
+    .images-container{
+        display: none;
+    }
+}
+
+@media (min-width: 800px) {
+    .images-container-mobile{
+        display: none;
     }
 }
