--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -5,6 +5,13 @@
         <div class="order">
             <div class="order-content">
                 <p class="text">Поръчано на {{order.orderCreatedOn | date: 'dd.MM'}}</p>
+
+                <div class="images-container-mobile">
+                    <div *ngFor="let product of order.productsPicture" class="order-img">
+                        <img alt="Image of the product" [src]="getBase64ImageUrl(product)">
+                    </div>
+                </div>
+
                 <div class="stickers">
                     <div *ngIf="order.deliveryDate" class="sticker bg-gray">
                         <p>Доставена</p>
