--- a/src/app/my-orders/my-orders.component.css
+++ b/src/app/my-orders/my-orders.component.css
@@ -45,6 +45,10 @@
             box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
         }
 
+        .order:hover{
+            border: 1px solid rgb(39, 39, 39);
+        }
+
             .order-content{
                 display: flex;
                 flex-direction: column;
