--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -52,6 +52,36 @@
             gap: 1rem;
         }
 
+        .profile-dropdown{
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: calc(4.5rem);
+            right: 4rem;
+
+            -webkit-box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
+            -moz-box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
+            box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
+
+            z-index: 1;
+            color: #25523B;
+            background-color: rgb(253, 250, 245);
+
+            font-family:'Open Sans', sans-serif;
+            font-size: 1rem;
+            font-weight: 400;
+            letter-spacing: .07em;
+            text-transform: none;
+            gap: 0 !important;
+
+            cursor: pointer;
+        }
+
+        .profile-dropdown li{
+            padding: 12px;
+            list-style: none;
+        }
+
         .misc-nav li{
             cursor: pointer;
         }
