--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -63,7 +63,7 @@
             -moz-box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
             box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
 
-            z-index: 1;
+            z-index: 10;
             color: #25523B;
             background-color: rgb(253, 250, 245);
 
@@ -73,13 +73,16 @@
             letter-spacing: .07em;
             text-transform: none;
             gap: 0 !important;
-
-            cursor: pointer;
         }
 
         .profile-dropdown li{
             padding: 12px;
             list-style: none;
+            cursor: pointer;
+        }
+
+        .profile-dropdown li:hover{
+            background-color: rgb(255, 239, 224);
         }
 
         .misc-nav li{
