--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -45,19 +45,33 @@
     .misc-nav{
         margin-right: 4rem;
         font-size: 1.5rem;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
     }
         .misc-nav ul{
             display: flex;
             list-style-type: none;
             gap: 1rem;
+
+            height: 100%;
+            align-items: center;
         }
 
-        .profile-dropdown{
+            .misc-nav ul li{
+                display: flex;
+                align-items: center;
+                height: 100%;
+            }
+
+        .profile-dropdown {
             display: flex;
             flex-direction: column;
             position: absolute;
             top: calc(4.5rem);
             right: 4rem;
+            height: auto;
 
             -webkit-box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
             -moz-box-shadow: 0px 0px 12px 1px rgba(36,36,36,0.48);
@@ -146,6 +160,10 @@
 
     .misc-nav{
         margin-right: .6rem;
+    }
+
+    .profile-dropdown{
+        right: .6rem;
     }
 
     .nav-logo{
