--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,12 +26,12 @@
             <li *ngIf="!isAuthenticated" class="profile" routerLink="/Login">
                 <i class="fa-regular fa-user"></i>
             </li>
-            <li *ngIf="isAuthenticated" class="profile" routerLink="/Profile/MyOrders">
+            <li *ngIf="isAuthenticated" (click)="toggleProfileDropdown()" class="profile" id="profile">
                 <i class="fa-regular fa-user"></i>
             </li>
         </ul>
     </div>
-    <ul class="profile-dropdown">
+    <ul *ngIf="isProfileDropdownOpen" (click)="toggleProfileDropdown()" class="profile-dropdown">
         <li routerLink="/Profile/MyOrders">
             <i class="fa-solid fa-cart-flatbed fa-fw"></i>
             Моите поръчки
@@ -46,7 +46,7 @@
         </li>
     </ul>
 </div>
-<div  [ngClass]="{'show': mobileNavToggle}" class="nav-container-mobile" >
+<div [ngClass]="{'show': mobileNavToggle}" class="nav-container-mobile" >
     <ul>
         <li routerLink="/Indoor-plants">
             За дома
