Added redirects to profile options in profile component and nav component.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
             <i class="fa-solid fa-cart-flatbed fa-fw"></i>
             Моите поръчки
         </li>
-        <li routerLink="/Profile/Security">
+        <li routerLink="/Profile/Options">
             <i class="fa-solid fa-lock fa-fw"></i>
             Профил и сигурност
         </li>
