--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
                 <i class="fa-solid fa-cart-flatbed fa-fw"></i>
                 Моите поръчки
             </li>
-            <li (click)="SelectItemIndex(2)" [class.active]="selectedIndex === 2">
+            <li (click)="SelectItemIndex(2)" routerLink="Options" [class.active]="selectedIndex === 2">
                 <i class="fa-solid fa-lock fa-fw"></i>
                 Сигурност
             </li>
