--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,9 +17,9 @@
     </div>
     <div class="misc-nav">
         <ul>
-            <li class="cart" [class.animate-cart]="cart.products.length > 0" routerLink="/Cart">
+            <li class="cart" [class.animate-cart]="isProductAddedToCart" routerLink="/Cart">
                 <i class="fa-solid fa-cart-shopping"></i>
-                <span class="cart-count" *ngIf="cart.products.length > 0">{{ cart.products.length }}</span>
+                <span class="cart-count" *ngIf="isProductAddedToCart">{{ cart.products.length }}</span>
             </li>
             <li class="favourite" routerLink="/Favourites">
                 <i class="fa-regular fa-heart"></i>
