Updated nav component to update cartCount; Updated nav component to display the right amount of products in cart.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
         <ul>
             <li class="cart" [class.animate-cart]="isProductAddedToCart" routerLink="/Cart">
                 <i class="fa-solid fa-cart-shopping"></i>
-                <span class="cart-count" *ngIf="isProductAddedToCart">{{ cart.products.length }}</span>
+                <span class="cart-count" *ngIf="isProductAddedToCart">{{ productsInCart }}</span>
             </li>
             <li class="favourite" routerLink="/Favourites">
                 <i class="fa-regular fa-heart"></i>
